fix(zoom): card buttons opacity causes a layout shift

--- a/src/styles/layout/modes.css
+++ b/src/styles/layout/modes.css
@@ -45,7 +45,7 @@
         }
     }
 
-    & .column{
+    & .column {
         /* to show outline card buttons*/
         padding: 0 calc(1 / var(--zoom-level) * 50vw);
     }
@@ -92,6 +92,11 @@
 #columns-container.zoom-enabled {
     * {
         transition: none !important;
+    }
+}
+#columns-container.zoom-enabled {
+    .lineage-floating-button {
+        opacity: 0.5 !important;
     }
 }
 
